<resources>
    <string name="app_name">Laboratório Fit</string>
    <string name="title_user">Usuário</string>
    <string name="title_ficha">Ficha de treino</string>
    <string name="title_dieta">Dieta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="treino">Treino</string>
    <string name="refeicao">Refeição</string>
    <string name="horario">Horário</string>
    <string name="adicionar_refeicao">Adicionar refeição</string>
    <string name="edit_fragment_title">Editar refeição</string>
    <string name="deletar">Deletar</string>
    <string name="atualizar">Atualizar</string>
    <string name="series_totais">Série totais</string>
    <string name="repeticoes">Repetições</string>
    <string name="serie_atual">Série Atual</string>
    <string name="adicionar_treino">Adicionar treino</string>
    <string name="editar_treino">Editar treino</string>
    <string name="academias_e_nutricionistas">Academias e nutricionistas</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="genero">Gênero</string>
    <string name="alterar">Alterar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="facebook_app_id">2841539852778703</string> <string name="fb_login_protocol_scheme">fb2841539852778703</string>
    <string name="ola_usuario">Olá, usuário</string>
    <string name="altura">Altura:</string>
    <string name="_0_cm">0 cm</string>
    <string name="peso">Peso:</string>
    <string name="_0_kg">0 kg</string>
    <string name="_0">0</string>
    <string name="senha">Senha</string>
    <string name="altura_em_centimetros">Altura (em centímetros)</string>
    <string name="peso_only">Peso</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="clique_aqui_para_cadastrar_se">Clique aqui para cadastrar-se</string>
    <string name="adicionar_exercicio">Adicionar exercício</string>
    <string name="nome">Nome</string>
    <string name="deslogar">Deslogar</string>
    <string name="deseja_encontrar_um_nutrionista">Deseja encontrar um nutrionista?</string>
    <string name="deseja_encontrar_um_personal_trainer">Deseja encontrar um personal trainer?</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="imc">IMC:</string>
</resources>